# openclaw-token-compass

./: .gitignore  README.md  pyproject.toml
examples/: actual.from_log.json  actual.sample.json  estimate.output.json  workflow.sample.json
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: install_openclaw_plugin.sh
src/openclaw_token_compass/: __init__.py  cli.py  estimator.py  log_parser.py  provider.py  storage.py  tokenizer.py
src/openclaw_token_compass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_estimator.py  test_log_parser.py  test_provider.py  test_storage.py
